Update to match chrome api change, fixed CSS bug with data table overlapping mappings

--- a/display.css
+++ b/display.css
@@ -75,7 +75,7 @@ div.panel-group {
 }
 
 div.panel div.panel-heading {
-    padding: 0px 10px;
+    padding: 0 10px;
 }
 
 table.dataTable {
@@ -214,6 +214,10 @@ div.mapping-group {
     padding-left: 5px;
     padding-top: 5px;
     width: 100%;
+}
+
+.page-content {
+    margin-right: 180px;
 }
 
 .sidebar-nav {
